add demo of choose clinic ui

--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -23,7 +23,7 @@
     <!-- Add your site or application content here -->
     
 
-    <div ng-view="">
+    <div ng-view="" class="mainView">
     </div>
 
     <footer-app></footer-app>
@@ -63,6 +63,7 @@
         <script src="scripts/layouts/footer/footer.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
         <script src="scripts/layouts/sidebar/sidebar.module.js"></script>
+        <script src="scripts/service/apiService.module.js"></script>
         <script src="scripts/features/login/login.component.js"></script>
         <script src="scripts/features/login/login.controller.js"></script>
         <script src="scripts/features/login/login.service.js"></script>
@@ -73,7 +74,6 @@
         <script src="scripts/layouts/header/header.component.js"></script>
         <script src="scripts/layouts/header/header.controller.js"></script>
         <script src="scripts/layouts/sidebar/sidebar.component.js"></script>
-        <script src="scripts/service/apiService.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
          
