--- a/Client/app/scripts/features/login/clientLogin.html
+++ b/Client/app/scripts/features/login/clientLogin.html
@@ -1,1 +1,31 @@
-<h1>Hello</h1>
+<form class="loginform container-fluid border mt-5 mb-3 d-flex flex-column align-items-center justify-content-center w-50" method="Post" ng-submit="clientLoginCtrl.clientLogin()">
+  <h1>Log in here!</h1>
+  <div class="mb-3 w-75">
+    <label for="usernameLogin" class="form-label">Username:</label>
+    <input type="text" name="usernameLogin" id="usernameLogin" ng-required="true" ng-model="clientLoginCtrl.usernameLogin" class="form-control">
+  </div>
+  
+  <div class="mb-3 w-75">
+    <label for="emailLogin" class="form-label">Email:</label>
+    <input type="email" name="emailLogin" id="emailLogin" ng-required="true" ng-model="clientLoginCtrl.emailLogin" class="form-control">
+  </div>
+  
+  <div class="mb-3 w-75">
+    <label for="passwordLogin" class="form-label">Password:</label>
+    <input type="password" name="passwordLogin" id="passwordLogin" ng-required="true" ng-model="clientLoginCtrl.passwordLogin" class="form-control">
+  </div>
+
+  <div class="mb-3 w-75">
+    <label for="roleLogin" class="form-label">Role:</label>
+    <input type="text" name="roleLogin" id="roleLogin" ng-required="true" ng-model="clientLoginCtrl.roleLogin" class="form-control">
+  </div>
+  
+  <button type="submit" class="btn btn-primary mb-3 w-25" >Confirm</button>
+  <a href="" class="link-primary link-offset-1 mb-3">Don't have an account yet? Signup here!</a>
+</form>
+
+<div class="alert alert-success alert-dismissible mb-3" id="authAlert" ng-show="clientLoginCtrl.showAlert"> 
+  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+  <span id="authAction"></span> <strong id="authState"></strong>
+  <p id="alertMessage"></p>
+</div>
