--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- Add your site or application content here -->
     
-
+    <header-app></header-app>
     <div ng-view="" class="mainView">
     </div>
 
@@ -43,7 +43,7 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -58,12 +58,17 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <!-- injector:js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/features/clientFilter/clientFilter.module.js"></script>
+        <script src="scripts/features/clinicFilter/clinicFilter.module.js"></script>
         <script src="scripts/features/login/login.module.js"></script>
         <script src="scripts/features/signup/signup.module.js"></script>
         <script src="scripts/layouts/footer/footer.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
-        <script src="scripts/layouts/sidebar/sidebar.module.js"></script>
         <script src="scripts/service/apiService.module.js"></script>
+        <script src="scripts/features/clientFilter/clientFilter.component.js"></script>
+        <script src="scripts/features/clientFilter/clientFilter.controller.js"></script>
+        <script src="scripts/features/clinicFilter/clinicFilter.component.js"></script>
+        <script src="scripts/features/clinicFilter/clinicFilter.controller.js"></script>
         <script src="scripts/features/login/login.component.js"></script>
         <script src="scripts/features/login/login.controller.js"></script>
         <script src="scripts/features/login/login.service.js"></script>
@@ -73,7 +78,6 @@
         <script src="scripts/layouts/footer/footer.component.js"></script>
         <script src="scripts/layouts/header/header.component.js"></script>
         <script src="scripts/layouts/header/header.controller.js"></script>
-        <script src="scripts/layouts/sidebar/sidebar.component.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
          
