--- a/Client/app/scripts/features/login/chooseClinic.html
+++ b/Client/app/scripts/features/login/chooseClinic.html
@@ -1,64 +1,2 @@
-<div class="container-fluid m-3">
-    <div class="row g-2">
-        <!-- <div class="card" style="width: 18rem;"> -->
-        <div class="col-6 col-md-3" style="cursor: pointer;">
-            <div class="card">
-                <img src="images/clinics/default-clinics.jpg" class="card-img-top" alt="clinic image">
-                <div class="card-body">
-                    <h5 class="card-title">Clinic name</h5>
-                    <p class="card-text">Example of clinic address</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-3" style="cursor: pointer;">
-            <div class="card">
-                <img src="images/clinics/default-clinics.jpg" class="card-img-top" alt="clinic image">
-                <div class="card-body">
-                    <h5 class="card-title">Clinic name</h5>
-                    <p class="card-text">Example of clinic address</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-3" style="cursor: pointer;">
-            <div class="card">
-                <img src="images/clinics/default-clinics.jpg" class="card-img-top" alt="clinic image">
-                <div class="card-body">
-                    <h5 class="card-title">Clinic name</h5>
-                    <p class="card-text">Example of clinic address</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-3" style="cursor: pointer;">
-            <div class="card">
-                <img src="images/clinics/default-clinics.jpg" class="card-img-top" alt="clinic image">
-                <div class="card-body">
-                    <h5 class="card-title">Clinic name</h5>
-                    <p class="card-text">Example of clinic address</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-3" style="cursor: pointer;">
-            <div class="card">
-                <img src="images/clinics/default-clinics.jpg" class="card-img-top" alt="clinic image">
-                <div class="card-body">
-                    <h5 class="card-title">Clinic name</h5>
-                    <p class="card-text">Example of clinic address</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-3" style="cursor: pointer;">
-            <div class="card">
-                <img src="images/clinics/default-clinics.jpg" class="card-img-top" alt="clinic image">
-                <div class="card-body">
-                    <h5 class="card-title">Clinic name</h5>
-                    <p class="card-text">Example of clinic address</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<div ng-include="'scripts/layouts/clinicFilter/clinicFilter.html'"></div>
+<div ng-include="'scripts/layouts/clinicList/clinicList.html'"></div>
