--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -58,19 +58,23 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <!-- injector:js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/features/clientFilter/clientFilter.module.js"></script>
+        <script src="scripts/features/client/client.module.js"></script>
         <script src="scripts/features/login/login.module.js"></script>
         <script src="scripts/features/signup/signup.module.js"></script>
+        <script src="scripts/layouts/clientFilter/clientFilter.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
         <script src="scripts/service/apiService.module.js"></script>
-        <script src="scripts/features/clientFilter/clientFilter.component.js"></script>
-        <script src="scripts/features/clientFilter/clientFilter.controller.js"></script>
+        <script src="scripts/features/client/client.comonent.js"></script>
+        <script src="scripts/features/client/client.controller.js"></script>
+        <script src="scripts/features/client/client.service.js"></script>
         <script src="scripts/features/login/login.component.js"></script>
         <script src="scripts/features/login/login.controller.js"></script>
         <script src="scripts/features/login/login.service.js"></script>
         <script src="scripts/features/signup/signup.component.js"></script>
         <script src="scripts/features/signup/signup.controller.js"></script>
         <script src="scripts/features/signup/signup.service.js"></script>
+        <script src="scripts/layouts/clientFilter/clientFilter.component.js"></script>
+        <script src="scripts/layouts/clientFilter/clientFilter.controller.js"></script>
         <script src="scripts/layouts/header/header.component.js"></script>
         <script src="scripts/layouts/header/header.controller.js"></script>
         <!-- endinjector -->
