add client profile component

--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -59,22 +59,23 @@
         <!-- injector:js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/features/client/client.module.js"></script>
+        <script src="scripts/features/clientProfile/clientProfile.module.js"></script>
         <script src="scripts/features/login/login.module.js"></script>
         <script src="scripts/features/signup/signup.module.js"></script>
-        <script src="scripts/layouts/clientFilter/clientFilter.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
         <script src="scripts/service/apiService.module.js"></script>
         <script src="scripts/features/client/client.comonent.js"></script>
         <script src="scripts/features/client/client.controller.js"></script>
         <script src="scripts/features/client/client.service.js"></script>
+        <script src="scripts/features/clientProfile/clientProfile.component.js"></script>
+        <script src="scripts/features/clientProfile/clientProfile.controller.js"></script>
+        <script src="scripts/features/clientProfile/clientProfile.service.js"></script>
         <script src="scripts/features/login/login.component.js"></script>
         <script src="scripts/features/login/login.controller.js"></script>
         <script src="scripts/features/login/login.service.js"></script>
         <script src="scripts/features/signup/signup.component.js"></script>
         <script src="scripts/features/signup/signup.controller.js"></script>
         <script src="scripts/features/signup/signup.service.js"></script>
-        <script src="scripts/layouts/clientFilter/clientFilter.component.js"></script>
-        <script src="scripts/layouts/clientFilter/clientFilter.controller.js"></script>
         <script src="scripts/layouts/header/header.component.js"></script>
         <script src="scripts/layouts/header/header.controller.js"></script>
         <!-- endinjector -->
