add clinic Profile

--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -60,6 +60,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/features/client/client.module.js"></script>
         <script src="scripts/features/clientProfile/clientProfile.module.js"></script>
+        <script src="scripts/features/clinicProfile/clinicProfile.module.js"></script>
         <script src="scripts/features/login/login.module.js"></script>
         <script src="scripts/features/signup/signup.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
@@ -70,6 +71,9 @@
         <script src="scripts/features/clientProfile/clientProfile.component.js"></script>
         <script src="scripts/features/clientProfile/clientProfile.controller.js"></script>
         <script src="scripts/features/clientProfile/clientProfile.service.js"></script>
+        <script src="scripts/features/clinicProfile/clinicProfile.component.js"></script>
+        <script src="scripts/features/clinicProfile/clinicProfile.controller.js"></script>
+        <script src="scripts/features/clinicProfile/clinicProfile.service.js"></script>
         <script src="scripts/features/login/login.component.js"></script>
         <script src="scripts/features/login/login.controller.js"></script>
         <script src="scripts/features/login/login.service.js"></script>
