--- a/Client/app/scripts/features/client/client.html
+++ b/Client/app/scripts/features/client/client.html
@@ -1,2 +1,4 @@
-<div ng-include="'scripts/layouts/clientFilter/clientFilter.html'"></div>
-<div ng-include="'scripts/layouts/clientList/clientList.html'"></div>
+<div class="container-fluid">
+    <div ng-include="'scripts/layouts/clientFilter/clientFilter.html'"></div>
+    <div ng-include="'scripts/layouts/clientList/clientList.html'"></div>
+</div>
