--- a/Client/app/scripts/features/clientProfile/clientProfile.html
+++ b/Client/app/scripts/features/clientProfile/clientProfile.html
@@ -86,7 +86,7 @@
       </div>
       <div class="modal-body">
         <label for="editUsername" class="form-label">Username</label>
-        <input type3="text" id="editUsername" class="form-control mb-3" aria-describedby="usernameHelpBlock">
+        <input type="text" id="editUsername" class="form-control mb-3">
 
         <label for="editEmail" class="form-label">Email</label>
         <input type="email" id="editEmail" class="form-control mb-3">
