--- a/Client/app/scripts/features/clinicProfile/clinicProfile.html
+++ b/Client/app/scripts/features/clinicProfile/clinicProfile.html
@@ -3,7 +3,7 @@
         <div class="col-4">
             <div class="card w-100">
                 <img src="images/clinics/default-clinics.jpg" class="card-img-top" alt="Clinic picture">
-                <div class="card-body d-flex flex-column justify-content-center">
+                <div class="card-body vstack gap-1">
                     <h3 class="card-title text-center">Clinic Name</h3>
                     <button type="button" class="btn btn-danger mb-3" data-bs-toggle="modal" data-bs-target="#editClinic">
                         Edit clinic
