done UI of report page

--- a/Client/app/scripts/features/adminDashboard/adminDashboard.html
+++ b/Client/app/scripts/features/adminDashboard/adminDashboard.html
@@ -1,1 +1,86 @@
-<h1>Hello</h1>
+<div class="container-fluid">
+    <h1 class="text-center mb-4">Report</h1>
+    <div class="hstack gap-5 justify-content-center mb-3">
+        <div class="card w-10">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h6 class="text-body-secondary">Total users</h6>
+                    <img src="images/bootstrap-icon/people-fill.svg" alt="Total user icon" style="height: 20px; width: 30px">
+                </div>
+                <h3 class="card-title mb-2">69</h3>
+                <p class="card-text"><strong class="text-success">90%</strong> Up to sumshi</p>
+            </div>
+        </div>
+
+        <div class="card w-10">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h6 class="text-body-secondary">Total clinics</h6>
+                    <img src="images/bootstrap-icon/hospital-fill.svg" alt="Total user icon" style="height: 20px; width: 30px">
+                </div>
+                <h3 class="card-title mb-2">36</h3>
+                <p class="card-text"><strong class="text-success">420%</strong> Up to sumshi</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="hstack gap-2 justify-content-center mb-3">
+        <div class="border rounded w-40 p-2">
+            <div id="userStatusPieChart"></div>
+        </div>
+
+        <div class="border rounded w-40 p-2">
+            <div id="userPerClinicHorizontalBarChart"></div>   
+        </div>
+    </div>
+
+    <div class="border rounded p-2">
+        <div id="userRegisteredOvertimeLineChar"></div>
+    </div>
+    
+</div>
+
+<script> // For demonstration purpose only
+
+
+// userStatusPieChart
+
+const xPieChart = ["Italy", "France", "Spain", "USA", "Argentina"];
+const yPieChard = [55, 49, 44, 24, 15];
+
+const layoutPieChart = {title:"World Wide Wine Production"};
+
+const dataPieChart = [{labels:xPieChart, values:yPieChard, type:"pie"}];
+
+Plotly.newPlot("userStatusPieChart", dataPieChart, layoutPieChart);
+
+// userPerClinicHorizontalBarChart
+const xHorizontalBarChart = [55, 49, 44, 24, 15];
+const yHorizontalBarChart = ["Italy","France","Spain","USA","Argentina"];
+
+const dataHorizontalBarChart = [{
+  x: xHorizontalBarChart,
+  y: yHorizontalBarChart,
+  type: "bar",
+  orientation: "h",
+  marker: {color:"rgba(255,0,0,0.6)"}
+}];
+
+const layoutHorizontalBarChart = {title:"World Wide Wine Production"};
+
+Plotly.newPlot("userPerClinicHorizontalBarChart", dataHorizontalBarChart, layoutHorizontalBarChart);
+
+// userRegisteredOvertimeLineChar
+let expLineChart = "Math.sin(x)";
+
+const xLineChart = [];
+const yLineChart = [];
+for (let x = 0; x <= 10; x += 0.1) {
+  xLineChart.push(x);
+  yLineChart.push(eval(expLineChart));
+}
+
+const dataLineChart = [{x:xLineChart, y:yLineChart, mode:"lines"}];
+const layoutLineChart = {title: "y = " + expLineChart};
+Plotly.newPlot("userRegisteredOvertimeLineChar", dataLineChart, layoutLineChart);
+</script>
