--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <!-- endbuild -->
   </head>
   <body ng-app="clinicApp">
@@ -38,10 +39,10 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script> -->
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/plotly/plotly.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -58,6 +59,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <!-- injector:js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/features/adminDashboard/adminDashboard.module.js"></script>
         <script src="scripts/features/client/client.module.js"></script>
         <script src="scripts/features/clientProfile/clientProfile.module.js"></script>
         <script src="scripts/features/clinicProfile/clinicProfile.module.js"></script>
@@ -65,6 +67,9 @@
         <script src="scripts/features/signup/signup.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
         <script src="scripts/service/apiService.module.js"></script>
+        <script src="scripts/features/adminDashboard/adminDashboard.component.js"></script>
+        <script src="scripts/features/adminDashboard/adminDashboard.controller.js"></script>
+        <script src="scripts/features/adminDashboard/adminDashboard.service.js"></script>
         <script src="scripts/features/client/client.comonent.js"></script>
         <script src="scripts/features/client/client.controller.js"></script>
         <script src="scripts/features/client/client.service.js"></script>
