fix vocab error

--- a/Client/app/scripts/features/adminDashboard/adminDashboard.html
+++ b/Client/app/scripts/features/adminDashboard/adminDashboard.html
@@ -46,11 +46,11 @@
 // userStatusPieChart
 
 const xPieChart = ["Italy", "France", "Spain", "USA", "Argentina"];
-const yPieChard = [55, 49, 44, 24, 15];
+const yPieChart = [55, 49, 44, 24, 15];
 
 const layoutPieChart = {title:"World Wide Wine Production"};
 
-const dataPieChart = [{labels:xPieChart, values:yPieChard, type:"pie"}];
+const dataPieChart = [{labels:xPieChart, values:yPieChart, type:"pie"}];
 
 Plotly.newPlot("userStatusPieChart", dataPieChart, layoutPieChart);
 
