--- a/Client/app/scripts/features/login/adminLogin.html
+++ b/Client/app/scripts/features/login/adminLogin.html
@@ -1,9 +1,5 @@
-<form class="loginform container-fluid border mt-5 mb-3 d-flex flex-column align-items-center justify-content-center w-50" method="Post" ng-submit="adminLoginCtrl.adminLogin()">
+<form class="loginform container-fluid border mt-5 mb-3 d-flex flex-column align-items-center justify-content-center w-50 p-4" method="Post" ng-submit="adminLoginCtrl.adminLogin()">
   <h1>Log in here!</h1>
-  <div class="mb-3 w-75">
-    <label for="usernameLogin" class="form-label">Username:</label>
-    <input type="text" name="usernameLogin" id="usernameLogin" ng-required="true" ng-model="adminLoginCtrl.usernameLogin" class="form-control">
-  </div>
   
   <div class="mb-3 w-75">
     <label for="emailLogin" class="form-label">Email:</label>
@@ -16,8 +12,8 @@
   </div>
 
   <div class="mb-3 w-75">
-    <label for="roleLogin" class="form-label">Role:</label>
-    <input type="text" name="roleLogin" id="roleLogin" ng-required="true" ng-model="adminLoginCtrl.roleLogin" class="form-control">
+    <label for="clinicNameLogin" class="form-label">Clinic name:</label>
+    <input type="text" name="clinicNameLogin" id="clinicNameLogin" ng-required="true" ng-model="adminLoginCtrl.clinicNameLogin" class="form-control">
   </div>
   
   <button type="submit" class="btn btn-primary mb-3 w-25" >Confirm</button>
