add dynamic routing for header

--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/features/clinicProfile/clinicProfile.service.js"></script>
         <script src="scripts/features/login/login.service.js"></script>
         <script src="scripts/features/signup/signup.service.js"></script>
+        <script src="scripts/layouts/header/header.service.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.component.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.controller.js"></script>
         <script src="scripts/features/client/client.comonent.js"></script>
