Done display profile and logout for admins

--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -60,6 +60,7 @@
         <script src="scripts/util.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.module.js"></script>
+        <script src="scripts/features/adminProfile/adminProfile.module.js"></script>
         <script src="scripts/features/client/client.module.js"></script>
         <script src="scripts/features/clientProfile/clientProfile.module.js"></script>
         <script src="scripts/features/clinicDashboard/clinicDashboard.module.js"></script>
@@ -68,6 +69,7 @@
         <script src="scripts/features/signup/signup.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.service.js"></script>
+        <script src="scripts/features/adminProfile/adminProfile.service.js"></script>
         <script src="scripts/features/client/client.service.js"></script>
         <script src="scripts/features/clientProfile/clientProfile.service.js"></script>
         <script src="scripts/features/clinicDashboard/clinicDashboard.service.js"></script>
@@ -77,6 +79,8 @@
         <script src="scripts/layouts/header/header.service.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.component.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.controller.js"></script>
+        <script src="scripts/features/adminProfile/adminProfile.component.js"></script>
+        <script src="scripts/features/adminProfile/adminProfile.controller.js"></script>
         <script src="scripts/features/client/client.comonent.js"></script>
         <script src="scripts/features/client/client.controller.js"></script>
         <script src="scripts/features/clientProfile/clientProfile.component.js"></script>
