--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/features/clinicProfile/clinicProfile.module.js"></script>
         <script src="scripts/features/login/login.module.js"></script>
         <script src="scripts/features/signup/signup.module.js"></script>
+        <script src="scripts/features/viewClientProfile/viewClientProfile.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.service.js"></script>
         <script src="scripts/features/adminProfile/adminProfile.service.js"></script>
@@ -76,6 +77,7 @@
         <script src="scripts/features/clinicProfile/clinicProfile.service.js"></script>
         <script src="scripts/features/login/login.service.js"></script>
         <script src="scripts/features/signup/signup.service.js"></script>
+        <script src="scripts/features/viewClientProfile/viewClientProfile.service.js"></script>
         <script src="scripts/layouts/header/header.service.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.component.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.controller.js"></script>
@@ -93,6 +95,8 @@
         <script src="scripts/features/login/login.controller.js"></script>
         <script src="scripts/features/signup/signup.component.js"></script>
         <script src="scripts/features/signup/signup.controller.js"></script>
+        <script src="scripts/features/viewClientProfile/viewClientProfile.component.js"></script>
+        <script src="scripts/features/viewClientProfile/viewClientProfile.controller.js"></script>
         <script src="scripts/layouts/header/header.component.js"></script>
         <script src="scripts/layouts/header/header.controller.js"></script>
         <!-- endinjector -->
