--- a/Client/app/scripts/features/viewClientProfile/viewClientProfile.html
+++ b/Client/app/scripts/features/viewClientProfile/viewClientProfile.html
@@ -4,12 +4,9 @@
             <div class="card w-100">
                 <img src="images/default/default-pfp.png" class="card-img-top" alt="Client profile picture">
                 <div class="card-body d-flex flex-column justify-content-center">
-                    <h3 class="card-title text-center">{{ clientProfileCtrl.username }}</h3>
-                    <button type="button" class="btn btn-danger mb-3" data-bs-toggle="modal" data-bs-target="#editClient">
+                    <h3 class="card-title text-center">Client Name</h3>
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#editClient">
                         Edit client
-                    </button>
-                    <button type="button" class="btn btn-danger mb-3" ng-click='clientProfileCtrl.logout()'>
-                        Log out
                     </button>
                 </div>
             </div>
@@ -21,7 +18,7 @@
                     Username
                 </div>
                 <div class="col-8">
-                    {{ clientProfileCtrl.username }}
+                    MarkXoan
                 </div>
             </div>
             <hr>
@@ -31,12 +28,12 @@
                     Email
                 </div>
                 <div class="col-8">
-                    {{ clientProfileCtrl.email }}
+                    Mark@example.com
                 </div>
             </div>
             <hr>
 
-            <!-- <div class="row mb-3">
+            <div class="row mb-3">
                 <div class="col-4">
                     Firstname
                 </div>
@@ -54,14 +51,14 @@
                     Xoan
                 </div>
             </div>
-            <hr> -->
+            <hr>
 
             <div class="row mb-3">
                 <div class="col-4">
                     Status
                 </div>
                 <div class="col-8">
-                    {{ clientProfileCtrl.accountStatus }}
+                    Activated
                 </div>
             </div>
             <hr>
@@ -71,7 +68,7 @@
                     Clinic
                 </div>
                 <div class="col-8">
-                    {{ clientProfileCtrl.clinicName }}
+                    Clinic_1
                 </div>
             </div>
             <hr>
@@ -94,7 +91,7 @@
         <label for="editEmail" class="form-label">Email</label>
         <input type="email" id="editEmail" class="form-control mb-3">
 
-        <!-- <label for="editStatus" class="form-label">Status</label>
+        <label for="editStatus" class="form-label">Status</label>
         <select class="form-select mb-3" aria-label="Select status options" id="editStatus">
             <option selected>Select client status</option>
             <option value="deactivated">Deactivated</option>
@@ -104,7 +101,7 @@
         </select>
 
         <label for="editClinic" class="form-label">Clinic</label>
-        <input type="text" id="editClinic" class="form-control mb-3"> -->
+        <input type="text" id="editClinic" class="form-control mb-3">
 
       </div>
       <div class="modal-footer">
