change from normal factory to session factory, every f5 need a api call

--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/features/signup/signup.module.js"></script>
         <script src="scripts/features/viewClientProfile/viewClientProfile.module.js"></script>
         <script src="scripts/layouts/header/header.module.js"></script>
+        <script src="scripts/layouts/notActivated/notActivated.module.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.service.js"></script>
         <script src="scripts/features/adminProfile/adminProfile.service.js"></script>
         <script src="scripts/features/client/client.service.js"></script>
@@ -79,6 +80,8 @@
         <script src="scripts/features/signup/signup.service.js"></script>
         <script src="scripts/features/viewClientProfile/viewClientProfile.service.js"></script>
         <script src="scripts/layouts/header/header.service.js"></script>
+        <script src="scripts/layouts/notActivated/notActivated.service.js"></script>
+        <script src="scripts/factory/sessionFactory.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.component.js"></script>
         <script src="scripts/features/adminDashboard/adminDashboard.controller.js"></script>
         <script src="scripts/features/adminProfile/adminProfile.component.js"></script>
@@ -99,6 +102,8 @@
         <script src="scripts/features/viewClientProfile/viewClientProfile.controller.js"></script>
         <script src="scripts/layouts/header/header.component.js"></script>
         <script src="scripts/layouts/header/header.controller.js"></script>
+        <script src="scripts/layouts/notActivated/notActivated.component.js"></script>
+        <script src="scripts/layouts/notActivated/notActivated.controller.js"></script>
         <!-- endinjector -->
         <!-- endbuild -->
          
