--- a/Client/app/scripts/features/adminProfile/adminProfile.html
+++ b/Client/app/scripts/features/adminProfile/adminProfile.html
@@ -60,7 +60,15 @@
 </div>
 
 
-<form class="modal fade" id="editAdmin" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="container d-flex align-items-center justify-content-center">
+  <div class="alert alert-success alert-dismissible show mb-3 w-100" id="authAlert" ng-show="adminProfileCtrl.showAlert"> 
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    <span id="authAction"></span> <strong id="authState"></strong>
+    <p id="alertMessage"></p>
+  </div>
+</div>
+
+<form class="modal fade" id="editAdmin" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" ng-submit="adminProfileCtrl.adminEdit()">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -69,10 +77,10 @@
       </div>
       <div class="modal-body">
         <label for="editUsername" class="form-label">Username</label>
-        <input type="text" id="editUsername" class="form-control mb-3">
+        <input type="text" id="editUsername" class="form-control mb-3" ng-model="adminProfileCtrl.editusername">
 
         <label for="editEmail" class="form-label">Email</label>
-        <input type="email" id="editEmail" class="form-control mb-3">
+        <input type="email" id="editEmail" class="form-control mb-3" ng-model="adminProfileCtrl.editemail">
 
       </div>
       <div class="modal-footer">
