--- a/Client/app/scripts/features/login/adminLogin.html
+++ b/Client/app/scripts/features/login/adminLogin.html
@@ -21,7 +21,7 @@
 </form>
 
 <div class="container d-flex align-items-center justify-content-center">
-  <div class="alert alert-success alert-dismissible show mb-3 w-100" id="authAlert" ng-show="signupCtrl.showAlert"> 
+  <div class="alert alert-success alert-dismissible show mb-3 w-100" id="authAlert" ng-show="adminLoginCtrl.showAlert"> 
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <span id="authAction"></span> <strong id="authState"></strong>
     <p id="alertMessage"></p>
